<?xml version="1.0"?>
<!DOCTYPE resources [
    <!ENTITY pass_symbol "4">
    <!ENTITY open_question "Въпрос с отворен отговор">
    <!ENTITY close_question "Въпрос със затворен отговор">

    ]>

<resources>
    <string name="app_name">Тестова система</string>

    <string name="email_hint">Email адрес</string>
    <string name="pass_hint">Парола</string>
    <string name="pass_confirm_hint">Повторете паролата</string>
    <string name="admin_panel">Админ панел</string>
    <string name="student_panel">Студентски панел</string>
    <string name="time_left_label">Оставащо време: </string>
    <string name="result_text">Резултат</string>
    <string name="results_text">Резултати</string>
    <string name="correct_label">Верни: </string>
    <string name="wrong_label">Грешни: </string>
    <string name="percentage_label">Успеваемост: </string>
    <string name="time_left">00:00</string>
    <string name="answer_hint">Вашият отговор</string>
    <string name="answer_correct_hint">Въведете верният отговор</string>
    <string name="answer_other_hint">Въведете друг отговор</string>
    <string name="question_hint">Въведете въпрос</string>
    <string name="catlabel">Категория: </string>
    <string name="close_question">"&close_question;"</string>
    <string name="open_question">"&open_question;"</string>

    <string-array name="question_types" >
        <item name="close_question">"&close_question;"</item>
        <item name="open_question">"&open_question;"</item>
    </string-array>

    // Messages
    <string name="successfull_registration">Успешна регистрация!</string>
    <string name="unsuccessfull_registration">Неуспешна регистрация</string>
    <string name="existing_email_error">"Вече съществува потребител с това потребителско име/email"</string>
    <string name="wrong_username_or_password">"Грешен email или парола"</string>
    <string name="successfull_login">"Успешно влизане в системата."</string>
    <string name="empty_fields">"Моля попълнете всички необходими полета"</string>
    <string name="add_question_success">"Въпросът беше добавен успешно."</string>
    <string name="add_question_failure">"Грешка. Въпросът не беше добавен."</string>
    <string name="add_category_success">"Категорията беше добавена успешно."</string>
    <string name="add_category_failure">"Грешка. Категорията не беше добавена."</string>
    <string name="times_up_label">Времето ви изтече</string>
    <string name="times_up_message">Ще бъдете пренасочени към страницата с резултати.</string>
    <string name="all_answered">Всички въпроси са отговорени</string>


    // Buttons
    <string name="print_button">Принтирай</string>
    <string name="ok_button">Добре</string>
    <string name="home_button">Начало</string>
    <string name="answer_button">Отговори</string>
    <string name="submit_button">Приключи тест</string>
    <string name="next_button">Следващ</string>
    <string name="addQuestion_button">Добави въпрос</string>
    <string name="reference_button">Справка</string>
    <string name="testButton">Тест</string>
    <string name="timedTestButton">Тест с време</string>
    <string name="test_end_button">Край на теста</string>
    <string name="logIn_button">Вписване</string>
    <string name="register_button">Регистрация</string>
    <string name="add_category_button">Добави категория</string>


    // Errors
    <string name="invalid_email_format">"Моля въведете валиден email адрес"</string>
    <string name="invalid_password_format">"Моля въведете парола по дълга от &pass_symbol; символа"</string>
    <string name="passwords_does_not_match">"Паролите не съпадат"</string>


</resources>
