<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bg.tu_sofia.pmu.project.testsystem.SingleTestSummaryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:id="@+id/resulTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correctLabel"
        android:text="@string/correct_label"
        android:textSize="@dimen/secondary_title_size"
        android:gravity="center"
        android:layout_below="@+id/resulTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wrongLabel"
        android:text="@string/wrong_label"
        android:textSize="@dimen/secondary_title_size"
        android:gravity="center"
        android:layout_below="@+id/correctLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/correctLabel"
        android:layout_alignEnd="@+id/correctLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percetageLabel"
        android:text="@string/percentage_label"
        android:textSize="@dimen/secondary_title_size"
        android:gravity="center"
        android:layout_below="@+id/wrongLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="@dimen/result_image_size"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/cross_icon"
        android:layout_above="@+id/print_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_button"
        android:id="@+id/print_button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button"
        android:id="@+id/begin_button"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />


</RelativeLayout>
