<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bg.tu_sofia.pmu.project.testsystem.AddQuestionActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/addQuestionText"
        android:hint="@string/question_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_types_spinner"
        android:layout_below="@+id/addQuestionText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/catSpinner"
        android:layout_below="@+id/question_types_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correctAnswerText"
        android:hint="@string/answer_correct_hint"
        android:layout_below="@+id/catSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/addQuestionText"
        android:layout_alignEnd="@+id/addQuestionText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otherAnswerText1"
        android:hint="@string/answer_other_hint"
        android:layout_below="@+id/correctAnswerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/correctAnswerText"
        android:layout_alignEnd="@+id/correctAnswerText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otherAnswerText2"
        android:hint="@string/answer_other_hint"
        android:layout_below="@+id/otherAnswerText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/otherAnswerText1"
        android:layout_alignEnd="@+id/otherAnswerText1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otherAnswerText3"
        android:hint="@string/answer_other_hint"
        android:layout_below="@+id/otherAnswerText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/otherAnswerText2"
        android:layout_alignEnd="@+id/otherAnswerText2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addQuestion_button"
        android:id="@+id/addQuestionB"
        android:layout_below="@+id/otherAnswerText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/otherAnswerText3"
        android:layout_alignEnd="@+id/otherAnswerText3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/addCategorybutton"
        android:layout_below="@+id/addQuestionB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/addQuestionB"
        android:layout_alignEnd="@+id/addQuestionB" />


</RelativeLayout>
